ConfigChangeActions now includes ReindexActions as well